--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="service-card fade-in">
-                    <img src="images/autres1.jpeg" alt="Autres événements">
+                    <img src="images/baby2.jpeg" alt="Autres événements">
                     <div class="p-4 text-center">
                         <h3>Autres événements</h3>
                         <p>Baby shower, entreprise, fêtes...</p>
