Changement de textes pour les sections de services

--- a/pages/services.html
+++ b/pages/services.html
@@ -53,7 +53,8 @@
                 <!-- Texte à gauche -->
                 <div class="col-lg-6 fade-in">
                     <h2 class="display-5 mb-4">Anniversaires</h2>
-                    <p class="lead">Ambiance festive et personnalisée pour tous les âges.</p>
+                    <p class="lead">Une ambiance festive, joyeuse et pleine de surprises, adaptée à tous les âges.</p>
+                    <p>Ballons élégants, douceurs gourmandes et touches personnelles pour rendre chaque bougie inoubliable.</p>
                 </div>
                 <!-- Images à droite -->
                 <div class="col-lg-6">
@@ -78,7 +79,8 @@
                 <!-- Texte à droite -->
                 <div class="col-lg-6 fade-in">
                     <h2 class="display-5 mb-4">Mariages</h2>
-                    <p class="lead">Décoration traditionnel et élégante pour votre jour J.</p>
+                    <p class="lead">Une décoration romantique, raffinée et pleine d’émotion pour votre jour J.</p>
+                    <p>Arches fleuries, tables élégantes et touches délicates pour un mariage qui vous ressemble.</p>
                 </div>
                 <!-- Images à gauche -->
                 <div class="col-lg-6">
@@ -103,7 +105,8 @@
                 <!-- Texte à gauche -->
                 <div class="col-lg-6 fade-in">
                     <h2 class="display-5 mb-4">Baptêmes</h2>
-                    <p class="lead">Ambiance douce et élégante pour ce moment spécial.</p>
+                    <p class="lead">Une ambiance douce, poétique et empreinte de tendresse pour ce moment précieux.</p>
+                    <p>Nuages légers, guirlandes pastel et détails délicats pour célébrer en douceur.</p>
                 </div>
                 <!-- Images à droite -->
                 <div class="col-lg-6">
@@ -128,7 +131,8 @@
                 <!-- Texte à droite -->
                 <div class="col-lg-6 fade-in">
                     <h2 class="display-5 mb-4">Autres événements</h2>
-                    <p class="lead">Baby shower, entreprise, fêtes de fin d’année...</p>
+                    <p class="lead">Baby shower, gender reveal, fêtes de fin d’année… chaque occasion mérite sa magie.</p>
+                    <p>Décors sur mesure, pleins de douceur et de personnalité pour des moments uniques.</p>
                 </div>
                 <!-- Images à gauche -->
                 <div class="col-lg-6">
