--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
-    <link rel="stylesheet" href="../styles/apropos.css">
+    <link rel="stylesheet" href="../styles/a-propos.css">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
     </nav>
 
     <!-- Hero avec image locale -->
-    <section class="hero" style="background-image: url('../images/apropo-hero.jpg');">
+    <section class="hero" style="background-image: url('../images/apropos.jpeg');">
         <div class="hero-overlay"></div>
         <div class="container position-relative text-center">
             <h1 class="display-4 fw-bold mb-3">À propos de DD ArtDeco</h1>
@@ -50,11 +50,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-6 fade-in">
                     <h2 class="display-5 mb-4">Une passion née au Mans</h2>
-                    <p class="lead mb-4">DD ArtDeco est une entreprise de décoration événementielle fondée au Mans (Sarthe). Depuis plus de 5 ans, notre équipe transforme des espaces en moments uniques pour anniversaires, baptêmes, mariages traditionnels, baby showers et fêtes privées.</p>
+                    <p class="lead mb-4">DD ArtDeco est une entreprise de décoration événementielle fondée au Mans (Sarthe). Depuis plus de 2 ans, notre équipe transforme des espaces en moments uniques pour anniversaires, baptêmes, mariages traditionnels, baby showers et fêtes privées.</p>
                     <p>Basés localement, nous excellons sur les lieux du Mans et de ses alentours. Nous apportons le même soin, la même créativité et la même qualité à chaque événement dans la région.</p>
                 </div>
                 <div class="col-lg-6 fade-in">
-                    <img src="https://images.unsplash.com/photo-1519741497674-281450b3b0f4?w=800" alt="Équipe DD ArtDeco en action" class="img-fluid rounded shadow">
+                    <img src="../images/apropo2.jpeg" alt="Équipe DD ArtDeco en action" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
