--- a/index.html
+++ b/index.html
@@ -107,26 +107,84 @@
         </div>
     </section>
 
-    <!-- Footer moderne, petit et épuré -->
-    <footer class="footer py-4">
-        <div class="container text-center">
-            <p class="mb-2 small text-muted">© 2026 DD ArtDeco – Le Mans et alentours</p>
-            <p class="mb-3 small">
-                <a href="mailto:contact@ddartdeco.fr" class="text-muted text-decoration-none">contact@ddartdeco.fr</a>
-                •
-                <a href="tel:+33612345678" class="text-muted text-decoration-none">06 12 34 56 78</a>
-            </p>
+<!-- Footer moderne, compact et pro -->
+<footer class="footer">
+    <div class="container">
+        <div class="row align-items-center py-4">
+            <!-- Colonne gauche : copyright + mentions -->
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                <p class="mb-1 text-muted small">
+                    © 2026 DD ArtDeco – Le Mans et alentours
+                </p>
+                <p class="mb-0 small">
+                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                </p>
+            </div>
 
-            <!-- Icônes sociales minimalistes -->
-            <div class="social-icons d-flex justify-content-center gap-4">
-                <a href="#" class="text-muted fs-5" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="text-muted fs-5" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a>
-                <a href="#" class="text-muted fs-5" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+            <!-- Colonne droite : téléphone, email, réseaux sociaux -->
+            <div class="col-md-6 text-center text-md-end">
+                <p class="mb-2 small">
+                    <a href="mailto:contact@ddartdeco.fr" class="text-muted text-decoration-none">contact@ddartdeco.fr</a>
+                </p>
+
+                <!-- Icônes sociales -->
+                <div class="social-icons d-flex justify-content-center justify-content-md-end gap-4">
+                    <a href="#" class="text-muted fs-5" aria-label="Instagram" target="_blank">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="#" class="text-muted fs-5" aria-label="Pinterest" target="_blank">
+                        <i class="bi bi-pinterest"></i>
+                    </a>
+                    <a href="#" class="text-muted fs-5" aria-label="Facebook" target="_blank">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
+    <!-- Modal Saint-Valentin chic – rouge doux -->
+    <div class="modal fade" id="saintValentinModal" tabindex="-1" aria-labelledby="saintValentinLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content overflow-hidden border-0" style="border-radius: 20px; background: #111;">
+                <!-- Header élégant rouge doux -->
+                <div class="modal-header text-center border-0 py-4" style="background: linear-gradient(135deg, #C71585, #FF69B4);">
+                    <h5 class="modal-title fw-bold fs-3" id="saintValentinLabel" style="color: #fff;">
+                        Spécial Saint-Valentin 💞
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Fermer"></button>
+                </div>
+                
+                <!-- Corps raffiné -->
+                <div class="modal-body text-center py-5 px-4" style="background: #000;">
+                    <h4 class="fw-bold mb-3" style="color: #FF69B4; font-size: 1.8rem;">
+                        -10 % sur votre devis
+                    </h4>
+                    <p class="lead mb-4" style="color: #ccc;">
+                        Réservez votre décoration romantique avant le 14 février et profitez de nos offres spéciales.
+                    </p>
+                    <a href="pages/devis.html" class="btn btn-lg px-5 py-3" style="background: #FF69B4; color: #111; border-radius: 50px; font-weight: 600; box-shadow: 0 8px 25px rgba(255, 105, 180, 0.4); transition: all 0.3s;">
+                        Demander mon devis -10 %
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Script pour afficher la popup au chargement -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const modalElement = document.getElementById('saintValentinModal');
+            if (modalElement) {
+                const modal = new bootstrap.Modal(modalElement);
+                modal.show(); // Affiche immédiatement
+            }
+        });
+    </script>
 </body>
 </html>
