--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,6 @@
                 <div class="col-lg-5 fade-in">
                     <h2 class="mb-4">Nos coordonnées</h2>
                     <ul class="list-unstyled">
-                        <li class="mb-3"><strong>Téléphone :</strong> +33 6 12 34 56 78</li>
                         <li class="mb-3"><strong>Email :</strong> contact@ddartdeco.fr</li>
                         <li class="mb-3"><strong>Adresse :</strong> Le Mans (Sarthe)</li>
                         <li class="mb-3"><strong>Zone d'intervention :</strong> Le Mans et alentours</li>
@@ -61,8 +60,7 @@
                     <h3 class="mt-5 mb-3">Réseaux sociaux</h3>
                     <div>
                         <a href="#" class="me-3">Instagram</a>
-                        <a href="#" class="me-3">Pinterest</a>
-                        <a href="#">Facebook</a>
+                        <a href="#">TikTok</a>
                     </div>
                 </div>
 
@@ -90,32 +88,50 @@
                         </div>
                         <div class="text-center mt-5">
                             <button type="submit" class="btn btn-primary btn-lg px-5">Envoyer</button>
-                            <p class="mt-3 small text-muted">Nous vous répondons sous 48h</p>
+                            <p class="mt-3 small text-muted">Nous vous répondons sous 24h</p>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+<!-- Footer moderne, compact et pro -->
+<footer class="footer">
+    <div class="container">
+        <div class="row align-items-center py-4">
+            <!-- Colonne gauche : copyright + mentions -->
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                <p class="mb-1 text-muted small">
+                    © 2026 DD ArtDeco – Le Mans et alentours
+                </p>
+                <p class="mb-0 small">
+                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                </p>
+            </div>
 
-    <!-- Footer moderne, petit et épuré -->
-    <footer class="footer py-4">
-        <div class="container text-center">
-            <p class="mb-2 small text-muted">© 2026 DD ArtDeco – Le Mans et alentours</p>
-            <p class="mb-3 small">
-                <a href="mailto:contact@ddartdeco.fr" class="text-muted text-decoration-none">contact@ddartdeco.fr</a>
-                •
-                <a href="tel:+33612345678" class="text-muted text-decoration-none">06 12 34 56 78</a>
-            </p>
+            <!-- Colonne droite : téléphone, email, réseaux sociaux -->
+            <div class="col-md-6 text-center text-md-end">
+                <p class="mb-2 small">
+                    <a href="mailto:contact@ddartdeco.fr" class="text-muted text-decoration-none">contact@ddartdeco.fr</a>
+                </p>
 
-            <!-- Icônes sociales minimalistes -->
-            <div class="social-icons d-flex justify-content-center gap-4">
-                <a href="#" class="text-muted fs-5" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="text-muted fs-5" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a>
-                <a href="#" class="text-muted fs-5" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                <!-- Icônes sociales -->
+                <div class="social-icons d-flex justify-content-center justify-content-md-end gap-4">
+                    <a href="#" class="text-muted fs-5" aria-label="Instagram" target="_blank">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="#" class="text-muted fs-5" aria-label="Pinterest" target="_blank">
+                        <i class="bi bi-pinterest"></i>
+                    </a>
+                    <a href="#" class="text-muted fs-5" aria-label="Facebook" target="_blank">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
     <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
