--- a/pages/services.html
+++ b/pages/services.html
@@ -157,24 +157,43 @@
         </div>
     </section>
 
-    <!-- Footer moderne, petit et épuré -->
-    <footer class="footer py-4">
-        <div class="container text-center">
-            <p class="mb-2 small text-muted">© 2026 DD ArtDeco – Le Mans et alentours</p>
-            <p class="mb-3 small">
-                <a href="mailto:contact@ddartdeco.fr" class="text-muted text-decoration-none">contact@ddartdeco.fr</a>
-                •
-                <a href="tel:+33612345678" class="text-muted text-decoration-none">06 12 34 56 78</a>
-            </p>
+<!-- Footer moderne, compact et pro -->
+<footer class="footer">
+    <div class="container">
+        <div class="row align-items-center py-4">
+            <!-- Colonne gauche : copyright + mentions -->
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                <p class="mb-1 text-muted small">
+                    © 2026 DD ArtDeco – Le Mans et alentours
+                </p>
+                <p class="mb-0 small">
+                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                </p>
+            </div>
 
-            <!-- Icônes sociales minimalistes -->
-            <div class="social-icons d-flex justify-content-center gap-4">
-                <a href="#" class="text-muted fs-5" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="text-muted fs-5" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a>
-                <a href="#" class="text-muted fs-5" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+            <!-- Colonne droite : téléphone, email, réseaux sociaux -->
+            <div class="col-md-6 text-center text-md-end">
+                <p class="mb-2 small">
+                    <a href="mailto:contact@ddartdeco.fr" class="text-muted text-decoration-none">contact@ddartdeco.fr</a>
+                </p>
+
+                <!-- Icônes sociales -->
+                <div class="social-icons d-flex justify-content-center justify-content-md-end gap-4">
+                    <a href="#" class="text-muted fs-5" aria-label="Instagram" target="_blank">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="#" class="text-muted fs-5" aria-label="Pinterest" target="_blank">
+                        <i class="bi bi-pinterest"></i>
+                    </a>
+                    <a href="#" class="text-muted fs-5" aria-label="Facebook" target="_blank">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
     <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
