--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DD ArtDeco - Décoration Événementielle au Mans</title>
+    <title>DD ArtDeco - Décoration Événementielle au Mans et alentours</title>
+    <meta name="description" content="DD ArtDeco : décoration événementielle élégante et personnalisée au Mans et alentours. Mariages, baptêmes, anniversaires, baby shower. Devis gratuit et rapide.">
+    <meta name="keywords" content="décoration événementielle Le Mans, décoratrice mariage Le Mans, décoration baptême Sarthe, anniversaire personnalisé Mans, baby shower Le Mans">
+    <meta name="author" content="DD ArtDeco">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="DD ArtDeco - Décoration au Mans">
+    <meta property="og:description" content="Spécialiste de la décoration élégante pour tous vos événements au Mans et alentours. Devis gratuit.">
+    <meta property="og:image" content="assets/images/accueil-hero.jpg">
+    <meta property="og:url" content="https://ton-site.com/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="DD ArtDeco - Décoration au Mans">
+    <meta name="twitter:description" content="Décoration événementielle personnalisée au Mans et alentours.">
+    <meta name="twitter:image" content="assets/images/accueil-hero.jpg">
+
+    <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/commun.css">
@@ -117,8 +136,8 @@
                     © 2026 DD ArtDeco – Le Mans et alentours
                 </p>
                 <p class="mb-0 small">
-                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
-                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                    <a href="../pages/mentions.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="../pages/politiques.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
                 </p>
             </div>
 
