--- a/pages/devis.html
+++ b/pages/devis.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devis – DD ArtDeco</title>
+    <title>Demander un Devis Gratuit – DD ArtDeco</title>
+    <meta name="description" content="Demandez votre devis gratuit pour votre événement au Mans et alentours. Décoration personnalisée et sur mesure.">
+    <meta name="keywords" content="devis décoration Le Mans, devis mariage Sarthe, devis gratuit décoratrice">
+    <meta name="author" content="DD ArtDeco">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Demande de Devis - DD ArtDeco">
+    <meta property="og:description" content="Obtenez un devis personnalisé pour votre événement au Mans et alentours.">
+    <meta property="og:image" content="../images/devis-hero.jpg"> <!-- Mets ton image si tu en as une -->
+    <meta property="og:url" content="https://ton-site.com/devis.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Devis - DD ArtDeco">
+    <meta name="twitter:description" content="Devis gratuit pour votre événement au Mans et alentours.">
+    <meta name="twitter:image" content="../images/devis-hero.jpg">
+
+    <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
@@ -103,8 +122,8 @@
                     © 2026 DD ArtDeco – Le Mans et alentours
                 </p>
                 <p class="mb-0 small">
-                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
-                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                    <a href="mentions.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="politiques.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
                 </p>
             </div>
 
