--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos – DD ArtDeco</title>
+    <title>À propos de DD ArtDeco - Décoratrice au Mans</title>
+    <meta name="description" content="DD ArtDeco, décoratrice événementielle basée au Mans. Passionnée par la création d'ambiances uniques pour vos moments spéciaux dans la région.">
+    <meta name="keywords" content="décoratrice Le Mans, DD ArtDeco, décoration événementielle Sarthe">
+    <meta name="author" content="DD ArtDeco">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="À propos - DD ArtDeco">
+    <meta property="og:description" content="Rencontrez DD ArtDeco : votre partenaire décoration au Mans et alentours.">
+    <meta property="og:image" content="../images/apropos.jpeg">
+    <meta property="og:url" content="https://ton-site.com/a-propos.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="À propos - DD ArtDeco">
+    <meta name="twitter:description" content="Décoratrice au Mans et alentours.">
+    <meta name="twitter:image" content="../images/apropos.jpeg">
+
+    <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
-    <link rel="stylesheet" href="../styles/a-propos.css">
+    <link rel="stylesheet" href="../styles/apropos.css">
 </head>
 <body>
 
@@ -101,8 +120,8 @@
                     © 2026 DD ArtDeco – Le Mans et alentours
                 </p>
                 <p class="mb-0 small">
-                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
-                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                    <a href="mentions.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="politiques.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
                 </p>
             </div>
 
