--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact – DD ArtDeco</title>
+    <title>Contact - DD ArtDeco Le Mans</title>
+    <meta name="description" content="Contactez DD ArtDeco pour votre projet de décoration au Mans et alentours. Devis gratuit, réponse rapide par email ou téléphone.">
+    <meta name="keywords" content="contact décoratrice Le Mans, devis décoration Sarthe">
+    <meta name="author" content="DD ArtDeco">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contact - DD ArtDeco">
+    <meta property="og:description" content="Besoin d'un devis ou d'informations ? Contactez-nous !">
+    <meta property="og:image" content="../images/contact-hero.jpg">
+    <meta property="og:url" content="https://ton-site.com/contact.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact - DD ArtDeco">
+    <meta name="twitter:description" content="Contactez-nous pour votre événement au Mans et alentours.">
+    <meta name="twitter:image" content="../images/contact-hero.jpg">
+
+    <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
@@ -105,8 +124,8 @@
                     © 2026 DD ArtDeco – Le Mans et alentours
                 </p>
                 <p class="mb-0 small">
-                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
-                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                    <a href="mentions.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="politiques.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
                 </p>
             </div>
 
