--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services – DD ArtDeco</title>
+    <title>Services de Décoration – DD ArtDeco Le Mans</title>
+    <meta name="description" content="Découvrez nos services de décoration événementielle : mariages romantiques, baptêmes doux, anniversaires festifs et autres occasions au Mans et alentours.">
+    <meta name="keywords" content="décoration mariage Le Mans, décor anniversaire Sarthe, décoration baptême Mans, baby shower Le Mans, décoration locale Sarthe">
+    <meta name="author" content="DD ArtDeco">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Nos Services - DD ArtDeco">
+    <meta property="og:description" content="Décoration sur mesure pour mariages, baptêmes, anniversaires et plus au Mans et alentours.">
+    <meta property="og:image" content="../images/hero_services.jpg">
+    <meta property="og:url" content="https://ton-site.com/services.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Services - DD ArtDeco">
+    <meta name="twitter:description" content="Décoration événementielle au Mans et alentours.">
+    <meta name="twitter:image" content="../images/hero_services.jpg">
+
+    <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
@@ -167,8 +186,8 @@
                     © 2026 DD ArtDeco – Le Mans et alentours
                 </p>
                 <p class="mb-0 small">
-                    <a href="pages/mentions-legales.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
-                    <a href="pages/politique-confidentialite.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
+                    <a href="mentions.html" class="text-muted text-decoration-none me-3">Mentions légales</a>
+                    <a href="politiques.html" class="text-muted text-decoration-none">Politique de confidentialité</a>
                 </p>
             </div>
 
