--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
     <link rel="stylesheet" href="../styles/contact.css">
+    <!-- Favicon -->
+    <link rel="icon" href="../images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 </head>
 <body>
 
