--- a/pages/mentions.html
+++ b/pages/mentions.html
@@ -16,6 +16,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,400;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/commun.css">
+<!-- Favicon -->
+    <link rel="icon" href="../images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 </head>
 <body>
 
@@ -64,16 +69,18 @@
 
                     <div class="mb-5">
                         <h2 class="h4 mb-3">2. Directeur de la publication</h2>
-                        <p>[Ton prénom et nom], gérante de DD ArtDeco</p>
+                        <p> M. Antonio, gérant de DD ArtDeco</p>
                     </div>
 
                     <div class="mb-5">
-                        <h2 class="h4 mb-3">3. Hébergeur</h2>
-                        <p>
-                            Le site est hébergé par :<br>
-                            [Nom de l'hébergeur, ex : OVH, Vercel, Netlify]<br>
-                            Adresse : [Adresse de l'hébergeur]
-                        </p>
+                    <h2 class="h4 mb-3">3. Hébergeur</h2>
+                    <p>
+                        Le site est hébergé par <strong>Netlify, Inc.</strong><br>
+                        Adresse : 2325 3rd Street, Suite 296, San Francisco, CA 94107, États-Unis<br>
+                        Site web : <a href="https://www.netlify.com" target="_blank" rel="noopener noreferrer">
+                        https://www.netlify.com
+                        </a>
+                    </p>
                     </div>
 
                     <div class="mb-5">
@@ -86,7 +93,7 @@
                     <div class="mb-5">
                         <h2 class="h4 mb-3">5. Données personnelles</h2>
                         <p>
-                            Pour toute information concernant le traitement de vos données personnelles, veuillez consulter notre <a href="politique-confidentialite.html" class="text-decoration-underline">Politique de Confidentialité</a>.
+                            Pour toute information concernant le traitement de vos données personnelles, veuillez consulter notre <a href="politiques.html" class="text-decoration-underline">Politique de Confidentialité</a>.
                         </p>
                     </div>
 
